--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "next": "14.1.4",
     "openai": "^4.46.0",
     "react": "^18",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
+    "prisma": "^5.22.0",
     "typescript": "5.4.5"
   },
   "prettier": {
